--- a/app/src/main/res/layout/activity_covid.xml
+++ b/app/src/main/res/layout/activity_covid.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Covid_Activity">
+    tools:context=".Covid_Activity"
+    android:background="@drawable/covid">
 
     <TextView
         android:id="@+id/Covid"
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="COVID SCREENING"
         android:textAlignment="center"
-        android:textColor="@color/purple_500"
+        android:textColor="@color/black"
         android:textSize="30sp"
         tools:ignore="MissingConstraints">
 
@@ -33,5 +34,24 @@
         tools:ignore="MissingConstraints">
 
     </TextView>
+    <Button
+        android:id="@+id/Butt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="416dp"
+        android:layout_marginEnd="156dp"
+        android:layout_marginBottom="63dp"
+        android:text="Next"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:flow_horizontalAlign="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/User"
+        tools:ignore="MissingConstraints">
+
+    </Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
